# airbot_modules

./: .gitignore  README.md
src/airbot_error_manager/: CMakeLists.txt  package.xml
src/airbot_error_manager/config/: error_list.yaml  params.yaml
src/airbot_error_manager/include/error_manager/: error_manager_node.hpp
src/airbot_error_manager/include/error_monitor/: error_monitor.hpp  error_monitor_node.hpp
src/airbot_error_manager/launch/: error_manager.launch.py
src/airbot_error_manager/src/error_manager/: error_manager_node.cpp  main.cpp
src/airbot_error_manager/src/error_monitor/: error_monitor.cpp  error_monitor_node.cpp  main.cpp
src/airbot_lidar/: CMakeLists.txt  package.xml
src/airbot_lidar/config/: airbot_lidar_params.yaml
src/airbot_lidar/include/pointcloud_to_laserscan/: pointcloud_to_laserscan_node.hpp
src/airbot_lidar/launch/: lidar_dual_launch.py  merge_2_scan.launch.py
src/airbot_lidar/sdk/: CMakeLists.txt  node_lidar.cpp  node_lidar.h  point_cloud_optimize.cpp  readme.txt
src/airbot_lidar/src/lidar/: node_lidar_ros.cpp
src/airbot_lidar/src/pointcloud_to_laserscan/: pointcloud_to_laserscan_node.cpp
src/airbot_lidar/src/scan_merger/: laser_scan_merger.cpp
src/airbot_sensor_interface/: CMakeLists.txt  package.xml
src/airbot_sensor_interface/config/: sensor_interface_param.yaml
src/airbot_sensor_interface/include/param_manager/: param_manager_node.hpp
src/airbot_sensor_interface/include/sensor_interface/: sensor_interface_node.hpp
src/airbot_sensor_interface/include/sensor_interface/modules/camera/: pointcloud_camera.hpp
src/airbot_sensor_interface/include/sensor_interface/modules/camera/logging/: camera_object_logger.hpp
src/airbot_sensor_interface/include/sensor_interface/modules/cliff/: pointcloud_cliff.hpp
src/airbot_sensor_interface/include/sensor_interface/modules/collision/: pointcloud_collision.hpp
src/airbot_sensor_interface/include/sensor_interface/modules/tof/: pointcloud_tof.hpp  tof_row_34_processor.hpp
src/airbot_sensor_interface/include/utils/: boundingbox_generator.hpp  common_struct.hpp  frame_converter.hpp  pointcloud_generator.hpp
src/airbot_sensor_interface/launch/: param_manager.launch.py  sensor_interface.launch.py  sensor_interface_core.launch.py
src/airbot_sensor_interface/src/param_manager/: main.cpp  param_manager_node.cpp
src/airbot_sensor_interface/src/sensor_interface/: main.cpp  sensor_interface_node.cpp
src/airbot_sensor_interface/src/sensor_interface/modules/camera/: pointcloud_camera.cpp
src/airbot_sensor_interface/src/sensor_interface/modules/camera/logging/: camera_object_logger.cpp
src/airbot_sensor_interface/src/sensor_interface/modules/cliff/: pointcloud_cliff.cpp
src/airbot_sensor_interface/src/sensor_interface/modules/collision/: pointcloud_collision.cpp
src/airbot_sensor_interface/src/sensor_interface/modules/tof/: pointcloud_tof.cpp  tof_row_34_processor.cpp
src/airbot_sensor_interface/src/utils/: boundingbox_generator.cpp  frame_converter.cpp  pointcloud_generator.cpp
src/airbot_sensor_interface/test/: test_frame_changer.cpp
src/robot_custom_msgs/: CMakeLists.txt  package.xml
src/robot_custom_msgs/msg/: AbnormalEventData.msg  BatteryStatus.msg  BlockArea.msg  BottomIrData.msg  ImuCalibration.msg  StationData.msg  TofData.msg
