<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>airbot_error_manager</name>
  <version>0.0.0</version>
  <description>Transmit Error Information to Quber via UDP Interface</description>
  <maintainer email="hyjoe@everybot.net">everybot</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>robot_custom_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
